/*
* PSCF - Polymer Self-Consistent Field Theory
*
* Copyright 2016, The Regents of the University of Minnesota
* Distributed under the terms of the GNU General Public License.
*/

#include "Basis.tpp"

namespace Pscf {
namespace Pssp{

   template class Basis<1>;
   template class Basis<2>;
   template class Basis<3>;

}
}
